--- a/source/globals/_header.scss
+++ b/source/globals/_header.scss
@@ -20,6 +20,7 @@ header {
         }
 
         span {
+            user-select: none;
             margin-right: .5em;
         }
 
